# linzip

./: README.md
src/: index.html
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/output/bot/: CMakeLists.txt  package.xml
src-tauri/output/bot/config/: view_bot.rviz
src-tauri/output/bot/launch/: gazebo.launch  move_base.launch  navigation.launch
src-tauri/output/bot/maps/: house_map.pgm
src-tauri/output/bot/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL
src-tauri/output/bot/param/: costmap_common_params.yaml  global_costmap_params.yaml  trajectory_planner.yaml
src-tauri/output/bot/urdf/: bot.csv  bot.urdf
src-tauri/output/bot/worlds/: house.world
src-tauri/src/: main.rs
ui/: index.html  index.js  styles.css  test.rs
