[package]
name = "linzip"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open", "dialog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = "0.4"
simplelog = "0.11"

zip = "0.5.13"
aes = "0.7.5"
hex = "0.4.3"
sha2 = "0.10.6"
dotenv = "0.15.0"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
